# athantime

./: README.md  pyproject.toml
.github/workflows/: athantime-publish.yml
examples/: sched_athan.py  test_athan.py
src/athantimes/: calcs.py
