[project]
name = "athantimes"
version = "0.1.0"
description = "Calculate and Generate Athan and Salah Times"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
getathan = "athantimes:get_prayer_times"

[tool.ruff]
exclude = [ "tests/",]
src = ["src",]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", ]

[tool.ruff.lint]
select = [ "D", "W", "F", "I", "C", "B",]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
